# minimint-wasm-app

./: Cargo.toml  test.ts
.cargo/: config.toml
.github/workflows/: ci.yml
src/: cfg.json  lib.rs
