[package]
name = "minimint-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.57"
minimint-api = { git = "https://github.com/fedimint/minimint", version = "0.1.0" }
rexie = "0.4.1"
wasm-bindgen = "0.2.80"

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

[patch.crates-io]
secp256k1 = { git = "https://github.com/fedimint/rust-secp256k1/", branch = "minimint" }
